# fluent-python-journey

./: .gitattributes  .gitignore  LEARNING_JOURNAL.md  README.md  project_report.md  pyproject.toml  requirements.txt
chapter_01_python_data_model/: README.md  architecture_notes.md  benchmarks.py  examples.py  exercises.py  interview_questions.md  mini_project.py  notes.md  pitfalls.md
chapter_02_sequences/: README.md  architecture_notes.md  benchmarks.py  examples.py  exercises.py  interview_questions.md  mini_project.py  notes.md  pitfalls.md
chapter_03_dicts_sets/: README.md  architecture_notes.md  benchmarks.py  examples.py  exercises.py  interview_questions.md  mini_project.py  notes.md  pitfalls.md
chapter_04_unicode_text_bytes/: README.md  architecture_notes.md  benchmarks.py  examples.py  exercises.py  interview_questions.md  mini_project.py  notes.md  pitfalls.md
chapter_05_data_class_builders/: README.md  architecture_notes.md  benchmarks.py  examples.py  exercises.py  interview_questions.md  mini_project.py  notes.md  pitfalls.md
chapter_06_object_references/: README.md  architecture_notes.md  benchmarks.py  examples.py  exercises.py  interview_questions.md  mini_project.py  notes.md  pitfalls.md
chapter_07_functions_first_class/: README.md  architecture_notes.md  benchmarks.py  examples.py  exercises.py  interview_questions.md  mini_project.py  notes.md  pitfalls.md
chapter_08_type_hints_functions/: README.md  architecture_notes.md  benchmarks.py  examples.py  exercises.py  interview_questions.md  mini_project.py  notes.md  pitfalls.md
(+147 files in other folders)
